--- a/style.css
+++ b/style.css
@@ -204,7 +204,6 @@ section {
   justify-content: center;
   width: 80%;
   margin: auto;
-  /* padding-left: 250px; */
   padding: auto;
   padding-bottom: 17%;
 }
@@ -373,13 +372,14 @@ section {
 }
 .project-flexbox {
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
   height: 100%;
+  overflow-x: auto;
+  margin-top: -7rem;
 }
 
 .h1-projects {
-  padding-top: 20px;
+  padding-top: 3rem;
   margin-top: 0px;
   text-decoration: underline;
   font-size: 34px;
@@ -388,15 +388,18 @@ section {
   margin-right: auto;
 }
 
-.project1 {
+.project-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-bottom: 23vh;
+  box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 0 1.4rem;
 }
 
-.project1 img {
+.project-item img {
   width: 100%;
   max-width: 50vh;
   height: 65vh;
@@ -406,12 +409,12 @@ section {
 
 .projectText {
   text-decoration: underline;
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 .popup {
   width: 80%;
-  height: 70%;
+  height: 84%;
   background: var(--back-color3);
   border-radius: 6px;
   position: absolute;
@@ -426,7 +429,7 @@ section {
 
 .open-popup {
   visibility: visible;
-  top: 270%;
+  top: 335%;
   transform: translate(-50%, -50%) scale(1);
 }
 
@@ -455,16 +458,51 @@ section {
   font-size: 20px;
 }
 
-#video {
-  width: 80vh;
+#AraratVideo {
+  width: 90vh;
   height: auto;
   border: 4px solid var(--sec-color);
   border-radius: 5px;
 }
 
+#hoppVideo {
+  width: auto;
+  height: 56vh;
+  border: 4px solid var(--sec-color);
+  border-radius: 5px;
+}
+
+#pacmanVideo{
+  width: auto;
+  height: 49vh;
+  border: 2px solid var(--sec-color);
+  border-radius: 5px;
+}
+
+#iterVideo {
+  width: auto;
+  height: 60vh;
+  border: 1px solid var(--sec-color);
+  border-radius: 36px;
+}
+
+#TriventureMovie{
+  width: auto;
+  height: 53vh;
+  border: 1px solid var(--sec-color);
+  border-radius: 36px;
+}
+
+#memoryVideo {
+  width: auto;
+  height: 57vh;
+  border: 2px solid var(--back-color4);
+  border-radius: 25px;
+}
+
 .project-flexbox a:hover {
-  opacity: 0.7;
   cursor: pointer;
 }
+
 
 /*------------------------------------------------------*/
